[package]
name = "pibaf"
version = "0.1.4-b"
edition = "2024"
description = "Safe idiomatic vulkan wrapper"
license = "MIT"
repository = "https://github.com/WASDetchan/pibaf"
authors = [
  "WASDetchan"
]

[dependencies]
thiserror = "2.0"
bon = "3.8"
ash = {version = "0.38", features = ["linked"]}
strum = { version = "0.27", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
